templates/styles.css
@font-face {
  font-family: '<%= fontName %>';
  src: url('./fonts/<%= fontName %>.eot');
  src: url('./fonts/<%= fontName %>.eot?#iefix') format('eot'),
    url('./fonts/<%= fontName %>.woff') format('woff'),
    url('./fonts/<%= fontName %>.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

.icon:before {
  display: inline-block;
  vertical-align: middle;
  font-family: '<%= fontName %>';
  font-size: inherit;
  font-style: normal;
  font-weight: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<% _.each(glyphs, function(glyph) {

  if (glyph.name != '500donotdeletethis') {
  %>
.<%= glyph.name %>:before {
  content: "\<%= glyph.unicode[0].charCodeAt(0).toString(16).toUpperCase() %>"
}

<%
  }
});
%>

